Adicionado a responsividade e corrigido bug e melhoria no botao de copia

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
             </h1>
         </header>
         <main class="main">
-            
-
             <section class="area-desencriptar">
                 <div class="desencript-block">
                     <textarea class="field-desencriptar" placeholder="NADA ESCRITO POR AQUI"></textarea>
@@ -30,7 +28,7 @@
             </section>
 
             <section class="msg-desencript-area">
-                <div class="msg-desencript"></div>
+                <textarea class="msg-desencript" readonly></textarea>
                 <div class="msg-background">
                     Nenhuma mensagem encontrada
                     <p>Digite o texto no outro bloco para que ele possa se encriptar ou desencriptar aqui</p>
@@ -41,7 +39,7 @@
         </main>
 
         <footer>
-            <p>Desencriptador desenvolvido por José Rennyer. <a href="https://www.linkedin.com/in/jos%C3%A9-rennyer-813233231/">Linkedin</a></p>
+            <p>Desencriptador desenvolvido por José Rennyer. <a href="https://www.linkedin.com/in/jos%C3%A9-rennyer-813233231/">Linkedin</a> <a href="">Git hub</a></p>
         </footer>
         <script src="script/script.js"></script>
         <script src="script/copiar.js"></script>
